# api-to-mcp

./: .gitattributes  .gitignore  BATCH_RAPIDAPI.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_SOLUTION.md  HOW_IT_WORKS.md  LICENSE  PROJECT_SUMMARY.md  PUBLISH_GUIDE.md  RAPIDAPI_COMPLETE_GUIDE.md  RAPIDAPI_EASY_METHOD.md  RAPIDAPI_GUIDE.md  RAPIDAPI_REAL_SOLUTION.md  README.md  README_FINAL.md  SELENIUM_SETUP.md  START_HERE.md  USAGE.md  add_rapidapi_params.py  batch_crawl.ps1  batch_crawl.sh  batch_rapidapi.py  create_rapidapi_mcp.py  debug_param_extraction.py  extract_params_from_html.py  gui_app.py  how --stat a7c1aff  install_selenium.py  pyproject.toml  quickstart.py  rapidapi_google-search74_auto.json  rapidapi_jsearch_accurate.json  rapidapi_jsearch_auto.json  rapidapi_meteostat_auto.json  rapidapi_open-weather13_auto.json  rapidapi_seeking-alpha_auto.json  rapidapi_sms-verify3_auto.json  rapidapi_snow-day-probability-api_auto.json  rapidapi_spewhub_auto.json  (+6 more)
examples/: README.md  example_weather_api.json
src/api_to_mcp/: __init__.py  __main__.py  cli.py  config.py  enhancer.py  gui.py  models.py  publisher.py  tester.py
src/api_to_mcp/generator/: __init__.py  mcp_generator.py
src/api_to_mcp/parsers/: __init__.py  openapi_parser.py
